--- a/templates/poll_result.html
+++ b/templates/poll_result.html
@@ -5,15 +5,19 @@
     var vot={{b|tojson}};
     quest={{question|tojson}}
     var datas=[];
+    var sum=0;
     for(let i=0;i < opt.length;i++){
         let dict={};
         dict.y=vot[i];
         dict.label=opt[i];
         datas.push(dict);
-
+        sum=sum+vot[i];
     }
-window.onload = function () {
 
+window.onload = function () {
+    if(sum<1){
+      document.getElementById("novotes").innerHTML = "There is no votes as of now, Please share the poll link to get resposes";
+    }
 var options = {
     backgroundColor: "#282931",
 	title: {
@@ -46,9 +50,9 @@ $("#chartContainer").CanvasJSChart(options);
 <div class="container text-center mt-5">
   <h1>Hi {{name}}</h1>
   <p>Here is the result of your Poll:</p>
-  <br />
-    <div id="chartContainer" style="height: 370px; width: 100%;"></div>
+  <br /><p id="novotes"></p>
+  <div id="chartContainer" style="height: 370px; width: 100%;"></div>
 </div>
-<script src="https://canvasjs.com/assets/script/jquery-1.11.1.min.js"></script>
-<script src="https://canvasjs.com/assets/script/jquery.canvasjs.min.js"></script>
+  <script src="{{ url_for('static', filename='jquery.canvasjs.min.js') }}"
+          type="text/javascript"></script>
 {% endblock %}
