--- a/templates/index.html
+++ b/templates/index.html
@@ -4,9 +4,8 @@
   <br />
   <div class="row-flex">
     <div class="col-8">
-      <p>
-        This is a sample website made for learning Flask, a micro framework for
-        webdevelopment in python. If you are not registered, please register by
+      <p>A website where you can create and share polls. People can anonymously vote on
+        items and you (as the creator of the poll) can view results. If you are not registered, please register by
         clicking on Register button below, or if you have already registered
         please log in to continue.
       </p>
